# gencode

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  chat_client.py  chat_server.py  cpp_example.py  cpp_main.py  cpp_tcp.py  data_type.py  develop.md  example.py  example_docker.sh  example_go.py  example_win.py  examply.py  examply_win.py  gen_code.py  gen_cpp.py  gen_go_graphql.py  gen_go_graphql_project.py  gen_project.py  gencode.py  gencpp.py  go.mod  go.sum  go_example.py  go_gin_example.py  go_graphql_example.py  go_graphql_restful_example.py  go_restful_example.py  makefile  note  read_config.py  readme  setup.cfg  test_case.py  testmerge.txt  util.py
cmd/: actionConnectTest.json  actionDataRelease.json  addResourcePermission.json  createDataRelease.json  createDataService.json  deleteDataResouce.json  deleteDataService.json  getAllPermission.json  judgePermission.json  login.json  newVersion.json  newVersion2.json  queryDataReleaseDetail.json  queryDataService.json  queryDataServiceDetail.json  queryResourcePermission.json  setResourcePermission.json  testBug.json  upResourcePermission.json  updateDataRelease.json  updateDataResouce.json
code_framework/: framework.py  manager.py
code_framework/base/: attr_base.py.bak  generator_base.py  manager.py  module_base.py  protocol_generator_base.py  service_base.py  tcp_base.py
code_framework/client/: tcp_client.py
code_framework/common/: doc.py  (+11 more)
example/: test.json
json/: addResourcePermission.json  api.json  api.json5  api_gin.json5  api_grpc.json5  api_simply.json  api_url.json  bin.json5  chat.json  createDataResouce.json  delResourcePermission.json  errno.config  errno2.config  judgePermission.json  login.json  newVersion.json  newVersion2.json  newVersion3.json  queryDataRelease.json  queryDataResouce.json  test.json  updateDataService.json
mako/: cpp_client.mako  cpp_header.mako  cpp_server.mako  doc.md  doc_tcp_json.md
mako/cpp/: CMakeLists.txt  api.cpp  apis.h  build.sh  config.h  main.cpp  makefile  types.h
mako/cpp/adapt/: nlohmann_json.h  nlohmann_json_client.h.bak  nlohmann_json_server.h  tcp_binary.h  tcp_nlohmann_json.h
mako/cpp/api_test/: tcp_json.py
mako/cpp/asio/: client_async.h  tcp_async_client.h  tcp_async_server.cpp  tcp_async_server.h  tcp_connection.cpp  tcp_connection.h
mako/cpp/beast/: adapt_client_nlohmann_json.h  init.h  server.h  websocket_async_server.h  websocket_connection.h
mako/cpp/beast_websocket_async/: .adapt_client_nlohmann_json.h.swp  adapt_nlohmann_json.cpp  adapt_nlohmann_json.h  adapt_server_nlohmann_json.h  server.cpp  server.h
mako/cpp/common/: common_api.h  common_client_apis.cpp  common_server_api.cpp
mako/cpp/module/: api.h  binary_api.cpp  binary_api.h  binary_types.h  nlohmann_json_api.cpp  nlohmann_json_api.h  nlohmann_json_types.h  request_apis.cpp  response_api.cpp
mako/cpp/server/: service.h
mako/cpp/service/: api.cpp  api.h  binary_api.cpp  binary_api.h  binary_types.h  client_apis.cpp  nlohmann_json_api.cpp  nlohmann_json_api.h  server_api.cpp  types.h
mako/cpp/tcp_server/: tcp_connection.h  tcp_server.cpp  tcp_server.h
(+152 files in other folders)
